<resources>
    <string name="app_name">Material Design Library</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="first_item">First_Layout</string>
    <string name="second_item">Second_Layout</string>
    <string name="third_item">Third_Layout</string>
    <string name="fourth_item">Fourth_Layout</string>
    <string name="fifth_item">Fifth_Layout</string>
    <string name="sixth_item">Sixth_Layout</string>
    <string name="seventh_item">Log out</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="click">Click...</string>
    <string name="start">Start...</string>

    <string name="app_id">702606169872447</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
</resources>
